--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "antd": "^4.12.3",
     "axios": "^0.21.1",
     "final-form": "^4.20.1",
     "modali": "^1.2.0",
