--- a/public/manifest.json
+++ b/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#white000",
-  "background_color": "#blackblack"
+  "theme_color": "white",
+  "background_color": "black"
 }
