--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "final-form": "^4.20.1",
     "modali": "^1.2.0",
     "react": "^17.0.1",
+    "react-addons-update": "^15.6.3",
     "react-dom": "^17.0.1",
     "react-final-form": "^6.5.2",
     "react-icons": "^4.1.0",
