--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "modali": "^1.2.0",
     "react": "^17.0.1",
     "react-addons-update": "^15.6.3",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.1", 
     "react-final-form": "^6.5.2",
     "react-icons": "^4.1.0",
     "react-redux": "^7.2.2",
@@ -20,6 +20,7 @@
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
     "react-spring": "^9.0.0-rc.3",
+    "react-to-print": "^2.12.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
