--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.6.0",
     "antd": "^4.12.3",
     "axios": "^0.21.1",
+    "bold-ui": "^1.0.0-beta.45",
     "final-form": "^4.20.1",
     "google-auth-library": "^7.0.2",
     "modali": "^1.2.0",
@@ -27,6 +28,7 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "styled-tooltip-component": "^4.0.0",
+    "validator": "^13.5.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
